src/main/java/com/example/banktransfer/module/transference/v1/error/UnauthorizedTransactionError.java
package com.example.banktransfer.module.transference.v1.error;

public class UnauthorizedTransactionError extends Error {
    public UnauthorizedTransactionError() {
        super("Unauthorized transaction.");
    }
}
